--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-}
+/* Min CSS är huller om buller, men kommentarerna borde hjälpa till med navigering */
 
+/* Backdrop */
 body {
     background: url(Site-background-dark.jpg);
     background-size: contain;
-    /* #584f44; */
 }
 
+/* Navbar */
 .navbar {
     overflow: hidden;
     background-color: #ae4f3d;
@@ -18,7 +17,8 @@ body {
     box-shadow: 0 3px 12px black;
     z-index: 1;
 }
-  
+
+/* Navbar text */
 .a1 {
     float: left;
     display: block;
@@ -33,27 +33,8 @@ body {
     margin-left: 5px;
     margin-right: 40px;
 }
-  
-.navbar :hover {
-    color: #cccccc;
-    border: 100px;
-    transition-duration: 0.25s;
-}
 
-h1 {
-    margin-top: 50px;
-    color: turquoise;
-    text-shadow: 2px 2px 10px;
-    font-weight: bold;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-p {
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-}
-
+/* navbar ikon */
 .navbar img {
     width: 60px;
     float: left;
@@ -62,26 +43,30 @@ p {
     transition: .25s;
 }
 
+/* animationer */
 .navbar img:hover {
     transform: rotate(-20deg);
 }
-
-.container-lol {
-    padding: 1px 50px;
-    padding-bottom: 500px;
-    /* margin-top: 150px; */
-    background-color: #584f44;
-    box-shadow: 2px 2px 10px black;
+.navbar :hover {
+    color: #cccccc;
+    border: 100px;
+    transition-duration: 0.25s;
 }
-
+@media only screen and (max-width: 600px) {
+    .navbar {
+        display: none;
+    }
+}
 .fortnite {
     top: 0;
 }
+/* Navbar end */
 
+
+/* Högst upp på sidan */
 .fort {
     padding-top: 50px;
 }
-
 .top {
     font-size: 22px;
     font-family: Arial;
@@ -93,58 +78,69 @@ p {
     padding-top: 25px;
     padding-left: 10px;
 }
-
+.topimg {
+    float: left;
+    width: 150px;
+}
 .ommig {
     color: tomato;
     text-shadow: 2px 2px 10px;
 }
-
 .schema {
     color: yellow;
     text-shadow: 2px 2px 10px;
 }
-
 .intressen {
     color: lime;
     text-shadow: 2px 2px 10px;
 }
-
 .lankar {
     color: blue;
     text-shadow: 2px 2px 10px;
 }
 
+/* animationer */
 .fort :hover {
     color: #cccccc;
     transition-duration: 0.25s;
 }
+/* top end */
 
-.topimg {
-    float: left;
-    width: 150px;
+
+/* Brödtext */
+h1 {
+    margin-top: 50px;
+    color: aqua;
+    text-shadow: 2px 2px 10px;
+    font-weight: bold;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+}
+.text {
+    padding-bottom: 100px;
+}
+.container-lol {
+    padding: 1px 50px;
+    padding-bottom: 500px;
+    background-color: #584f44;
+    box-shadow: 2px 2px 10px black;
+}
 .wrapper {
     max-width: 100%;
     margin: 0 auto;
 }
-
-@media only screen and (max-width: 600px) {
-    .navbar {
-        display: none;
-    }
-}
-
-.text {
-    padding-bottom: 100px;
-}
-
 .swordfish {
     max-width: 20rem;
     float: right;
     transform: rotate(35deg);
 }
 
+
+/* Footer */
 footer {
     background-color: black;
     background-image: url(266377.jpg);
@@ -152,25 +148,37 @@ footer {
     background-repeat: no-repeat;
     padding-bottom: 7rem;
 }
-
-.foot h2 {
+.foot h2{
     color: rgb(255, 136, 0);
     text-shadow: 2px 2px 10px;
     text-align: left;
     padding: 3.5rem 1rem;
+    font-size: 2rem;
 }
-
+.foot h5 {
+    color: rgb(255, 136, 0);
+    text-shadow: 2px 2px 10px;
+    text-align: left;
+    padding: 3.5rem 1rem;
+    font-size: 2rem;
+}
 .social h3 {
     color: rgb(255, 0, 119);
     text-shadow: 2px 2px 10px;
     margin-left: 5rem;
     padding-top: 3.5rem;
+    font-size: 1.5rem;
 }
-
+.social h6{
+    color: rgb(255, 0, 119);
+    text-shadow: 2px 2px 10px;
+    margin-left: 5rem;
+    padding-top: 3.5rem;
+    font-size: 1.5rem;
+}
 .social a {
     margin-right: 2.5rem;
 }
-
 .footimg {
     width: 10rem;
     float: left;
@@ -178,64 +186,137 @@ footer {
     margin-right: 2rem;
 }
 
+
+/* Schema */
 td {
     color: black;
     background-color: white;
     text-align: center;
 }
-
 th {
     font-weight: bold;
     width: 10rem;
     height: 3.5rem;
+    background-color: rgb(19, 19, 19);
+    color: white;
 }
-
 .schedule1 {
     max-width: 100rem;
+    overflow-x: scroll;
+    margin-bottom: -25rem;
 }
-
 tr {
     max-width: 100rem;
 }
-
 .border {
     background-color: #b4b4b4;
     height: 3.5rem;
 }
-
 table {
     overflow-x: scroll;
+    background-color: black;
 }
 
+
+/* om mig */
 .crewpic {
     width: 45rem;
 }
-
 .aboutme-text {
     margin-bottom: 5rem;
 }
-
 .img-text {
     margin-top: -0.25rem;
     margin-bottom: -25rem;
 }
 
+
+/* länkar */
 .tvlink {
     width: 10rem;
-    margin-top: 3rem;
+    margin-top: 1rem;
     margin-bottom: -1rem;
 }
-
-.schedule1 {
-    overflow-x: scroll;
-    margin-bottom: -25rem;
-}
-
 .wiki {
     width: 10rem;
     margin-bottom: -2.75rem;
 }
-
 .link-text {
     margin-bottom: 5rem;
+}
+.merch {
+    width: 10rem;
+    margin-bottom: -1rem;
+}
+
+
+/* intressen */
+.container-lol h2 {
+    font-size: 1.75rem;
+    color: lime;
+    text-shadow: 2px 2px 10px lime;
+    margin-top: 5rem;
+    padding-left: 1rem;
+    margin-bottom: -0.25rem;
+}
+.container-lol h3 {
+    font-size: 1.75rem;
+    color: lime;
+    text-shadow: 2px 2px 10px lime;
+    margin-top: 5rem;
+    padding-right: 13.5rem;
+    margin-bottom: -0.25rem;
+    text-align: right;
+}
+.container-lol h4 {
+    font-size: 1.75rem;
+    color: lime;
+    text-shadow: 2px 2px 10px lime;
+    margin-top: 5rem;
+    padding-left: 1rem;
+    margin-bottom: -0.25rem;
+}
+.anime img {
+    width: 25rem;
+    padding-top: 1rem;
+    padding-bottom: 7rem;
+}
+.anime {
+    padding-bottom: 40rem
+}
+
+
+/* Optimering för mobilläge */
+@media only screen and (max-width: 600px) {
+    h3 h5 {
+        text-align: center;
+        margin-right: 4rem;
+    }
+
+    .social a {
+        padding-left: 4rem;
+        margin-right: -1rem;
+    }
+
+    .foot h2 h6{
+        font-size: 1.25rem;
+        padding-top: 12rem;
+        margin-bottom: -5rem;
+        text-align: center;
+    }
+
+    .footimg {
+        padding-left: 5.5rem;
+    }
+    
+    .topimg {
+        margin-bottom: 10rem;
+        padding-left: 1rem;
+        padding-top: 2rem;
+    }
+
+    .crewpic {
+        width: 100%;
+        margin-top: -4rem;
+    }
 }
